# ocr-tech

./: README.md  debug_pdf_processing.py  main.py  process_pdf.py  pyproject.toml  test.py  test_advanced_ocr.py  test_api.py  test_output.py
api/: main.py
ocr/: advanced_ocr.py  document_generator.py  paddle.py  structure.py
utils/: ingest.py  preprocess.py
